# gn_testy

./: .gitignore  README.md  guide.md
docs/: notes.md  python.md  vscode.md
src/: requirements.txt
src/mine1/: BUILD.gn
src/mine10/: BUILD.gn  README.md
src/mine10/src/: main.cc
src/mine11/: BUILD.gn  README.md
src/mine11/src/: CSV.cc  CSV.h  main.cc
src/mine12/: BUILD.gn  README.md
src/mine12/data/: data.csv
src/mine12/src/: main.cc
src/mine12/src/CSV/: BUILD.gn
src/mine2/: BUILD.gn  README.md
src/mine2/src/: MyMath.cc  main.cc
src/mine3/: BUILD.gn  README.md  in.json
src/mine3/src/: MyMath.h
src/mine4/: BUILD.gn
src/mine4/src/mystring/: BUILD.gn
src/mine5/: BUILD.gn  README.md
src/mine5/src/: main.cc
src/mine5/src/mystring/: BUILD.gn
src/mine6/: README.md
src/mine6/src/mymath/: BUILD.gn
src/mine6/src/mystring/: BUILD.gn  MyString.cc  MyString.h
src/mine7/: BUILD.gn  README.md
src/mine7/src/: main.cc
src/mine7/src/mymath/: BUILD.gn  MyMath.cc
src/mine7/src/mystring/: BUILD.gn  MyString.cc
src/mine8/: BUILD.gn  README.md
src/mine8/src/mymath/: MyMath.cc
src/mine8/src/test/: BUILD.gn  Testy.cc  Testy.h
src/mine9/: BUILD.gn  README.md
src/mine9/src/: main.c
src/mine9/src/mymath/: MyMath.cc  MyMath.h
src/mine9/src/mystring/: MyString.cc  MyString.h
src/simple_build/: README.md
