

     
 
executable("main") {
  sources = [ 
    "src/main.cc",
    "src/csv.cc" 
  ]
    
  configs += [ 
    ":myconfig"  # This refers to target in this same file
  ]
}




# Note the config can be put here
# after the config is referenced at top.
# ie. order does not matter.
config("myconfig") {
  defines = [ "VERBOSE=1" ]
}