 
executable("main") {
  sources = [ 
    "src/main.cc",
  ]

  deps = [
    "//src/CSV/:csv"
  ]

  include_dirs = [
    "//src/CSV"
  ]


  # this is revealed via:
  # $ gn desc out //:main --all runtime_deps  
  data = [
    "data/data.csv"
  ]


  configs += [ 
    ":myconfig"  # This refers to target in this same file
  ]

  # print the configs used to build this executable
  #print(configs)
}


# Note the config can be put here
# after the config is referenced at top.
# ie. order does not matter.
config("myconfig") {
  defines = [ "VERBOSE=1" ]
}
