executable("main") {
  sources = [ 
    "src/main.cc" 
  ]
# this connects the executable to the two
# library targets
  deps = [
    ":mymath",  # shorthand notation
    "//:mystring" # explicit long hand notation
  ]
}

# this makes a static library
# libmymath.a file
static_library("mymath") {
  sources = [ 
    "src/MyMath.cc",
    "src/MyMath.h" 
  ]
}

# this makes a dynamic library
# libmystring.so file
shared_library("mystring") {
  sources = [ 
    "src/MyString.cc",
    "src/MyString.h" 
  ]

  defines = [ "MYSTRING_IMPLEMENTATION"]
}